# fagdagen

./: .gitignore  README.md
ExtremeStartup/OMG/: index.js  index.test.js  package.json
ExtremeStartup/OMG/server/: index.js
KodeKata/apps/SB1FrontendApp/: webpack.dev.js
KodeKata/apps/SB1FrontendAppHotReload/: README.md  package.json
KodeKata/bowling/: README.md
KodeKata/bowling/c++/: CMakeInclude.txt  CMakeLists.txt  README.md
KodeKata/bowling/c++/include/: bowling_game.hpp
KodeKata/bowling/c++/src/: bowling_game.cpp
KodeKata/bowling/c++/tests/: test.cpp
KodeKata/bowling/clojure/: README.md
KodeKata/bowling/elm/: BowlingScoreCard.css  BowlingScoreCard.js  README.md  elm.json  index.html
KodeKata/bowling/erlang/: README.md  bowling.erl  tests.erl
KodeKata/bowling/go/: README.md  score.go  score_test.go
KodeKata/bowling/go2/: README.md  score_test.go
KodeKata/bowling/java/: README.md  pom.xml
KodeKata/bowling/java2/: README.md  pom.xml
KodeKata/bowling/js/: bowling-kata.html  bowlingkata-test.js  bowlingkata.js
KodeKata/bowling/ml/: README.md  bowling.csv  bowling.py  bowling_predict.py  requirements.txt
KodeKata/bowling/python/: README.md
KodeKata/game-of-life/c++-opengl/: CMakeLists.txt  README.md
KodeKata/game-of-life/c++-opengl/include/: framebuffer.hpp  math.hpp  shader.hpp  texture.hpp  vertexbuffer.hpp
KodeKata/game-of-life/c++-opengl/shaders/: game-of-life-fs.glsl  passthrough-fs.glsl  passthrough-vs.glsl
KodeKata/game-of-life/c++-opengl/src/: framebuffer.cpp  main.cpp  shader.cpp  texture.cpp  vertexbuffer.cpp
(+50 files in other folders)
